@@ -1,5 +1,11 @@
 2008-07-24  kitone  <kitone@gna.org>
 
+	reviewed by: <delete if not using a buddy>
+
+	* src/actions/DocumentManagement.cc:
+
+2008-07-24  kitone  <kitone@gna.org>
+
 	* src/gui/DialogFileChooser.cc:
 	Fix: Automatic video search only if "automatically-open-video" is enabled.
 
